--- a/src/pages/Messages/style.scss
+++ b/src/pages/Messages/style.scss
@@ -4,11 +4,9 @@
 .chat-page-container {
   @include center;
   flex-direction: row;
-  justify-content: space-evenly;
-  padding: 0rem 2rem;
-  flex-wrap: wrap;
   height: 90vh;
-  padding-top: 6rem;
+  margin-top: 5rem;
+  width: 100%;
 
   h1 {
     font-size: 2rem;
@@ -24,14 +22,18 @@
     flex: 0;
   }
 
+  .chats-section {
+    width: 25% !important;
+    min-width: 300px !important;
+  }
+
   .chats-section,
   .message-section {
-    @include nice-border;
-    width: 50%;
-    min-width: 300px;
-    max-width: 500px;
+    width: 70%;
+    min-width: 400px;
     height: 100%;
     padding: 1rem;
+    max-width: 800px;
 
     .scroll {
       width: 100%;
@@ -168,16 +170,25 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+.show {
+  display: none;
+}
+
+.hider {
+  display: flex;
+}
+
+@media screen and (max-width: 700px) {
   .chat-page-container {
     @include center;
     flex-direction: row;
     justify-content: space-evenly;
     padding: 0rem 2rem;
     flex-wrap: wrap;
-    height: 100vh !important;
+    height: 85vh !important;
     padding-top: 4.5rem;
-    padding-bottom: 1rem;
+    width: 100vw;
+    overflow-x: hidden;
 
     .chats-section,
     .message-section {
@@ -185,9 +196,28 @@
       flex-direction: column;
       justify-content: space-between;
       overflow: scroll;
-      width: 100%;
-      height: 49%;
-      padding: 0.3rem;
+      width: 100% !important;
     }
+
+    .chats-section {
+      max-width: 500px;
+    }
+
+    .chat-scroll {
+      padding: 0 1rem !important;
+    }
+    
+  }
+
+  .hider {
+    display: none;
+  }
+  .show {
+    display: flex;
+    justify-content: center;
+    padding: 0 1rem;
+    height: 86vh !important;
+    overflow: hidden;
+    padding-bottom: 1rem;
   }
 }
