--- a/src/pages/Friends/style/style.scss
+++ b/src/pages/Friends/style/style.scss
@@ -35,4 +35,34 @@
       height: 30%;
     }
   }
+
+}
+
+.show {
+  display: none;
+}
+
+@media screen and (max-width: 1050px) {
+  .hide {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .show {
+    display: flex !important;
+  }
+  .friend-container {
+    @include center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: 100vh;
+    padding-top: 6rem;
+
+    .scroll {
+      padding: 1rem;
+      height: 95%;
+    }
+  }
 }
