--- a/src/pages/Friends/style/style.scss
+++ b/src/pages/Friends/style/style.scss
@@ -60,9 +60,14 @@
     height: 100vh;
     padding-top: 6rem;
 
+    .friend-section {
+      width: 100vw;
+    }
+
     .scroll {
       padding: 1rem;
       height: 95%;
+      width: 100%;
     }
   }
 }
