updated style for placeholders

--- a/src/pages/Friends/style/style.scss
+++ b/src/pages/Friends/style/style.scss
@@ -57,6 +57,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
+    justify-content: flex-start;
     height: 100vh;
     padding-top: 6rem;
 
